bug/DNN-7738 - Reverted truncated text on the javascript and added CSS logic to add the same functionality.

--- a/DNN Platform/Modules/Dnn.Modules.DynamicContentManager/module.less
+++ b/DNN Platform/Modules/Dnn.Modules.DynamicContentManager/module.less
@@ -137,6 +137,14 @@ input[type="text"], select, textarea, input[type="email"], input[type="search"],
     width: 100%;
     border-collapse: collapse;
     border-bottom: 1px solid @border_color;
+	table-layout: fixed;
+	white-space: nowrap;
+}
+
+.dccContainer .dccTable .ellipsis-overflow{
+    overflow: hidden;
+    display: block;
+    text-overflow: ellipsis;
 }
 
 .dccContainer .dccTable tr:nth-child(2n) {
